[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level 1.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cursor.gd" type="Script" id=3]
[ext_resource path="res://Levels/letrasFondt.tres" type="DynamicFont" id=4]
[ext_resource path="res://cursor.png" type="Texture" id=5]
[ext_resource path="res://Complementos_y_ajustes/Complementos.tscn" type="PackedScene" id=6]
[ext_resource path="res://keys/Key_Q.tscn" type="PackedScene" id=7]
[ext_resource path="res://keys/Key_E.tscn" type="PackedScene" id=8]

[node name="Level 1" type="Node"]
script = ExtResource( 1 )
level_id = 1

[node name="Complementos" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 309, 183.47 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Explicacion" type="Label" parent="."]
anchor_left = 0.421
anchor_top = 0.084
anchor_right = 0.597
anchor_bottom = 0.221
margin_left = -1.38913
margin_top = 209.586
margin_right = -1.61316
margin_bottom = 209.386
custom_fonts/font = ExtResource( 4 )
text = "WASD to move

Mouse to aim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explicacion2" type="Label" parent="."]
anchor_left = 0.421
anchor_top = 0.084
anchor_right = 0.597
anchor_bottom = 0.221
margin_left = -363.273
margin_top = 194.975
margin_right = -291.497
margin_bottom = 194.775
custom_fonts/font = ExtResource( 4 )
text = "Press to change color

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key_Q" parent="." instance=ExtResource( 7 )]
position = Vector2( 145.466, 306.909 )
frame = 1

[node name="Key_E" parent="." instance=ExtResource( 8 )]
position = Vector2( 213.854, 309.396 )
frame = 1
